@@ -1,0 +1,46 @@
+# Per-platform rpm configuration file.
+
+#==============================================================================
+# ---- per-platform macros.
+#
+%_arch			@RPMCANONARCH@
+%_vendor		@RPMCANONVENDOR@
+%_os			@RPMCANONOS@
+%_target_platform	%{_target_cpu}-%{_vendor}-%{_target_os}
+%optflags		@RPMRC_OPTFLAGS@
+
+#==============================================================================
+# ---- configure macros.
+#
+%_prefix		@prefix@
+%_exec_prefix		@exec_prefix@
+%_bindir		@bindir@
+%_sbindir		@sbindir@
+%_libexecdir		@libexecdir@
+%_datadir		@datadir@
+%_sysconfdir		@sysconfdir@
+%_sharedstatedir	@sharedstatedir@
+%_localstatedir		@localstatedir@
+%_libdir		@libdir@
+%_includedir		@includedir@
+%_oldincludedir		@oldincludedir@
+%_infodir		@infodir@
+%_mandir		@mandir@
+
+#==============================================================================
+# ---- Build policy macros.
+#
+#------------------------------------------------------------------------
+#	Expanded at end of %install (Red Hat uses these for 6.2)
+#
+#%__spec_install_post    \
+#    /usr/lib/rpm/brp-compress \
+#    /usr/lib/rpm/brp-strip \
+#    /usr/lib/rpm/brp-strip-comment-note \
+#%{nil}
+#------------------------------------------------------------------------
+#	Expanded at end of %prep (Red Hat uses these for 6.2)
+#
+%_fixowner              [ `%{__id} -u` = '0' ] && %{__chown} -Rhf root
+%_fixgroup              [ `%{__id} -u` = '0' ] && %{__chgrp} -Rhf root
+%_fixperms              %{__chmod} -Rf a+rX,g-w,o-w
