@@ -1,4 +1,4 @@
-# $Id: rpmrc.in,v 2.16 1999/09/29 23:29:57 jbj Exp $
+# $Id: rpmrc.in,v 2.17 2000/02/25 16:29:44 jbj Exp $
 
 #############################################################
 
@@ -255,10 +255,5 @@ buildarch_compat: atariclone: m68kmint noarch
 buildarch_compat: milan: m68kmint noarch
 buildarch_compat: hades: m68kmint noarch
 
-#############################################################
-#macrofiles:	@RPMCONFIGDIR@/macros:@SYSCONFIGDIR@/macros:~/.rpmmacros
-
-macrofiles:	@RPMCONFIGDIR@/macros:@RPMCONFIGDIR@/%{_target}/macros:@SYSCONFIGDIR@/macros:@SYSCONFIGDIR@/%{_target}/macros:~/.rpmmacros
-
-#include: @RPMCONFIGDIR@/%{_target}/rpmrc
+macrofiles:	@RPMCONFIGDIR@/macros:@RPMCONFIGDIR@/%{_target}/macros:@SYSCONFIGDIR@/macros.specspo:@SYSCONFIGDIR@/macros:@SYSCONFIGDIR@/%{_target}/macros:~/.rpmmacros
 
